--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -32,7 +32,10 @@
             <header class="navbar my-nav">
                 <div class="container">
                     <div class="navbar-header">
-                        <a href="/" class="navbar-brand"><img src="/front_end/images/league-icons/challenger.png" style="line-height: 50px; width: 35px; display: inline-block;" />Freelo.gg</a>
+                        <a href="/" class="navbar-brand" style="padding: 0; line-height: 50px;">
+                            <img src="/front_end/images/league-icons/challenger.png" style="line-height: 50px; vertical-align: middle; width: 35px; display: inline-block;" />
+                            <span style="vertical-align: middle; display: inline-block;">Freelo.gg</span>
+                        </a>
                     </div>
                     <nav class="collapse navbar-collapse bs-navbar-collapse">
                         <ul class="nav navbar-nav">
