--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -79,7 +79,7 @@
                         <table class="table table-bordered table-striped table-stats">
                             <tbody>
                             <tr>
-                                <td colspan="99">Game on <strong>{{humandate stat.create_datetime}}</strong> lasted about <strong>{{stat.match_total_time_in_minutes}} minutes</strong></td>
+                                <td colspan="99">Game on <strong>{{humandate stat.create_datetime}}</strong> lasted about <strong>{{stat.match_total_time_in_minutes}} minutes</strong> <a href="{{stat.match_history_url}}" target="_blank">Match History</a></a></td>
                             </tr>
                             <tr>
                                 <td></td>
@@ -93,7 +93,8 @@
                                     <td class="{{player_classes stat.current_player_team_red index=index}}">
 
                                         <img src="{{player.champion.image_icon_url}}" width="30" /><br />
-                                        {{#link-to 'stats' controllers.summonerSearch.region player.summoner_name}}{{player.summoner_name}}{{/link-to}}
+                                        {{#link-to 'stats' controllers.summonerSearch.region player.summoner_name}}{{player.summoner_name}}{{/link-to}}<br />
+                                        {{player.summoner_kills}} / {{player.summoner_deaths}} / {{player.summoner_assists}}
 
                                         <div class="team-border"></div>
                                     </td>
@@ -124,7 +125,7 @@
                         </table>
                     {{else}}
                         <h2>Sorry, we couldn't find any recent ranked solo queue games for this summoner.</h2>
-                        <p class="lead">Misspelled summoner name? Wrong region? No games play?</p>
+                        <p class="lead">Misspelled summoner name? Wrong region? No games played?</p>
                     {{/each}}
                 </div>
             </div>
