added league icon ascending order

--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -74,6 +74,21 @@
         <script type="text/x-handlebars" data-template-name="stats">
             <div class="my-stats">
                 <h2>Latest Ranked Solo Queue Games</h2>
+                <div style="margin-bottom: 20px;">
+                    <img src="/front_end/images/league-icons/bronze.png" />
+                    ⇨
+                    <img src="/front_end/images/league-icons/silver.png" />
+                    ⇨
+                    <img src="/front_end/images/league-icons/gold.png" />
+                    ⇨
+                    <img src="/front_end/images/league-icons/platinum.png" />
+                    ⇨
+                    <img src="/front_end/images/league-icons/diamond.png" />
+                    ⇨
+                    <img src="/front_end/images/league-icons/master.png" />
+                    ⇨
+                    <img src="/front_end/images/league-icons/challenger.png" />
+                </div>
                 <div class="container">
                     {{#each stats as |stat|}}
                         <table class="table table-bordered table-striped table-stats">
