--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -73,67 +73,92 @@
 
         <script type="text/x-handlebars" data-template-name="stats">
             <div class="my-stats">
-                <h2>Latest Ranked Solo Queue Games</h2>
-                <div style="margin-bottom: 35px;">
-                    <img src="/front_end/images/league-icons/bronze.png" title="Bronze" />
-                    ⇨
-                    <img src="/front_end/images/league-icons/silver.png" title="Silver" />
-                    ⇨
-                    <img src="/front_end/images/league-icons/gold.png" title="Gold" />
-                    ⇨
-                    <img src="/front_end/images/league-icons/platinum.png" title="Platinum" />
-                    ⇨
-                    <img src="/front_end/images/league-icons/diamond.png" title="Diamond" />
-                    ⇨
-                    <img src="/front_end/images/league-icons/master.png" title="Master" />
-                    ⇨
-                    <img src="/front_end/images/league-icons/challenger.png" title="Challenger" />
-                </div>
                 <div class="container">
-                    {{#each stats as |stat|}}
-                        <table class="table table-bordered table-striped table-stats">
-                            <tbody>
-                            <tr>
-                                <td colspan="99" style="position: relative;">
-                                    Game on <strong>{{humandate stat.create_datetime}}</strong> lasted about <strong>{{stat.match_total_time_in_minutes}} minutes</strong>
-                                    <a style="position: absolute; right: 5px;" href="{{stat.match_history_url}}" target="_blank">Match History</a>
-                                    &nbsp;
-                                </td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td colspan="5" class="game-conclusion-left">{{if stat.current_player_won 'VICTORY' 'DEFEAT'}}</td>
-                                <td colspan="5" class="game-conclusion-right">{{if stat.current_player_won 'DEFEAT' 'VICTORY'}}</td>
-                            </tr>
-                            <tr class="header">
-                                <td class="expand-all-DISABLED"><i class="hide fa fa-plus-square-o"></i></td>
-                                <td class="hide"></td>
-                                {{#each stat.players as |player index|}}
-                                    <td class="{{player_classes stat.current_player_team_red index=index}}">
+                    {{#if loading}}
+                        <h2>
+                            <i class="fa fa-spinner fa-spin"></i> Loading...
+                        </h2>
+                    {{else}}
+                        {{#if error}}
+                            <h2>{{error.message}}</h2>
+                            {{#if error.tip}}
+                                <p class="lead">{{error.tip}}</p>
+                            {{/if}}
+                        {{/if}}
 
-                                        {{player-info player=player}}
+                        {{#if stats}}
+                            <h2>Latest Ranked Solo Queue Games</h2>
+                            <div style="margin-bottom: 35px;">
+                                <img src="/front_end/images/league-icons/bronze.png" title="Bronze" />
+                                ⇨
+                                <img src="/front_end/images/league-icons/silver.png" title="Silver" />
+                                ⇨
+                                <img src="/front_end/images/league-icons/gold.png" title="Gold" />
+                                ⇨
+                                <img src="/front_end/images/league-icons/platinum.png" title="Platinum" />
+                                ⇨
+                                <img src="/front_end/images/league-icons/diamond.png" title="Diamond" />
+                                ⇨
+                                <img src="/front_end/images/league-icons/master.png" title="Master" />
+                                ⇨
+                                <img src="/front_end/images/league-icons/challenger.png" title="Challenger" />
+                            </div>
+                        {{/if}}
 
-                                        <div class="team-border"></div>
+                        {{#each stats as |stat|}}
+                            <table class="table table-bordered table-striped table-stats">
+                                <tbody>
+                                <tr>
+                                    <td colspan="99" style="position: relative;">
+                                        Game on <strong>{{humandate stat.create_datetime}}</strong> lasted about <strong>{{stat.match_total_time_in_minutes}} minutes</strong>
+                                        <a style="position: absolute; right: 5px;" href="{{stat.match_history_url}}" target="_blank">Match History</a>
+                                        &nbsp;
                                     </td>
-                                {{/each}}
-                            </tr>
-                            {{#each stat.key_factors as |key_factor row_index|}}
-                                <tr class="row-{{row_index}}">
-                                    <td rowspan="1" class="group-DISABLED">{{key_factor.name}}</td>
-                                    <td class="hide">Overall</td>
-                                    {{#each key_factor.totals as |league index|}}
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td colspan="5" class="game-conclusion-left">{{if stat.current_player_won 'VICTORY' 'DEFEAT'}}</td>
+                                    <td colspan="5" class="game-conclusion-right">{{if stat.current_player_won 'DEFEAT' 'VICTORY'}}</td>
+                                </tr>
+                                <tr class="header">
+                                    <td class="expand-all-DISABLED"><i class="hide fa fa-plus-square-o"></i></td>
+                                    <td class="hide"></td>
+                                    {{#each stat.players as |player index|}}
                                         <td class="{{player_classes stat.current_player_team_red index=index}}">
-                                            {{league-decorator league=league}}
+
+                                            {{player-info player=player}}
+
+                                            <div class="team-border"></div>
                                         </td>
                                     {{/each}}
                                 </tr>
-                            {{/each}}
-                            </tbody>
-                        </table>
-                    {{else}}
-                        <h2>Sorry, we couldn't find any recent ranked solo queue games for this summoner.</h2>
-                        <p class="lead">Misspelled summoner name? Wrong region? No games played?</p>
-                    {{/each}}
+                                {{#each stat.key_factors as |key_factor row_index|}}
+                                    <tr class="row-{{row_index}}">
+                                        <td rowspan="1" class="group-DISABLED">{{key_factor.name}}</td>
+                                        <td class="hide">Overall</td>
+                                        {{#each key_factor.totals as |league index|}}
+                                            <td class="{{player_classes stat.current_player_team_red index=index}}">
+                                                {{league-decorator league=league}}
+                                            </td>
+                                        {{/each}}
+                                    </tr>
+                                {{/each}}
+                                </tbody>
+                            </table>
+                        {{/each}}
+
+                        {{#if stats}}
+                            {{#if loading_more}}
+                                <i class="fa fa-spinner fa-spin"></i> Loading...
+                            {{else}}
+                                {{#if no_more_matches}}
+                                    We are unable to pull more matches at this time.
+                                {{else}}
+                                    <div class="btn btn-danger btn-lg" {{action 'show_more'}}>Show More</div>
+                                {{/if}}
+                            {{/if}}
+                        {{/if}}
+                    {{/if}}
                 </div>
             </div>
         </script>
@@ -197,6 +222,8 @@
         <script src="http://builds.emberjs.com/beta/ember.debug.js"></script>
         <script src="http://builds.emberjs.com/beta/ember-data.js"></script>
         <script src="http://builds.emberjs.com/beta/ember-template-compiler.js"></script>
+        <!-- Util -->
+        <script src="/front_end/js/util.js"></script>
         <!-- App -->
         <script src="/front_end/js/ember/app.js"></script>
         <script src="/front_end/js/ember/router.js"></script>
