switched to non-debug version of ember and added code to suppress deprecation errors

--- a/site/front_end/templates/index.html
+++ b/site/front_end/templates/index.html
@@ -219,7 +219,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
         <!-- Ember -->
         <script src="/front_end/js/libs/handlebars-v3.0.3.js"></script>
-        <script src="http://builds.emberjs.com/beta/ember.debug.js"></script>
+        <script src="http://builds.emberjs.com/beta/ember.js"></script>
         <script src="http://builds.emberjs.com/beta/ember-data.js"></script>
         <script src="http://builds.emberjs.com/beta/ember-template-compiler.js"></script>
         <!-- Util -->
